src/objects/Interaccount_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Organizations</relationshipLabel>
        <relationshipName>Account_rel</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FirstOfPair__c</fullName>
        <description>evaluates to &quot;True&quot; for the record in a pair of mirror relationsihps that was created first - arbitrary, but allows us to dedup relationship lists in reports</description>
        <formula>IF ( VALUE(RIGHT(Name,5)) &lt; VALUE(RIGHT(Mirror_Relationship__r.Name,5)) , &quot;True&quot; , &quot;False&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is First Relationship Pair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mirror_Relationship__c</fullName>
        <inlineHelpText>connecting one relationship to it&apos;s mirror</inlineHelpText>
        <label>Mirror Relationship</label>
        <referenceTo>Interaccount_Relationship__c</referenceTo>
        <relationshipName>R00NR0000000UhmFMAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reciprocal_Relationship__c</fullName>
        <description>How this account is related back to the &quot;Related Account.&quot; 
Apex code creates a corresponding relationship if this is filled in.</description>
        <inlineHelpText>How this account is related back to the &quot;Related Account&quot; (e.g. for Contractor, choose Client). If you don&apos;t specify a reciprocal relationship, the related account won&apos;t have a relationship in its list.</inlineHelpText>
        <label>Reciprocal Relationship</label>
        <picklist>
            <controllingField>Relationship__c</controllingField>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch / Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <label>Related Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_related_rel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <formula>IF( AND(NULLVALUE(From_Date__c, TODAY() ) &lt;= TODAY() ,NULLVALUE(To_Date__c, TODAY() ) &gt;= TODAY() ) , &quot;Active&quot;, &quot;Inactive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this relationship active?</inlineHelpText>
        <label>Relationship Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>How the &quot;Related Account&quot; is related to this account.</description>
        <inlineHelpText>How the &quot;Related Account&quot; is related to this account.</inlineHelpText>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch / Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Organization Relationship</label>
    <nameField>
        <displayFormat>IAR-{00000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organization Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Related_Account_Not_editable</fullName>
        <active>true</active>
        <errorConditionFormula>and(not( ISNEW()), ISCHANGED(Related_Account__c ))</errorConditionFormula>
        <errorDisplayField>Related_Account__c</errorDisplayField>
        <errorMessage>If you want to change the Account in this relationship, delete the relationship and recreate it with the new Accounts</errorMessage>
    </validationRules>
</CustomObject>